--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,70 @@
 = Nifty Generators
 
-A collection of useful Rails generator scripts.
-
+An extended verison of the collection of useful Rails generator scripts created by
+ryanb http://github.com/ryanb/nifty-generators/ adding improved controller tests when
+using Shoulda (http://github.com/thoughtbot/shoulda), support for using factory_girl
+(http://github.com/thoughtbot/factory_girl) to provide the test fixtures, and support
+for the generation of formtastic (http://github.com/justinfrench/formtastic/) powered
+forms in the views.
 
 == Install
 
-  gem install nifty-generators
+Available only as a plugin.
 
-You may need to uninstall the older version if it's installed.
+To use in a single rails app:
 
-  gem uninstall ryanb-nifty-generators
+  script/plugin install git://github.com/iceburging/nifty-generators.git
 
+To make available to all rails apps:
+
+  ~/.rails/generators install git://github.com/iceburging/nifty-generators.git
 
 == Usage
 
-Once you install the gem, the generators will be available to all Rails
-applications on your system. If you run script/generate without any
-additional arguments you should see the available generators listed.
+If you run script/generate without any additional arguments you should see the
+available generators listed.
 
 To run the generator, go to your rails project directory and call it
 using the script/generate or script/destroy command.
 
   script/generate nifty_scaffold Recipe name:string index new
 
+== Extended Features
+
+=== Shoulda
+
+Simply use the nifty_scaffold generator with the +--shoulda+ option as before.
+The controller tests will now test assignment, response, template rendering and
+the flash status.
+
+  script/generate nifty_scaffold --shoulda Recipe name:string
+
+=== Factory Girl
+
+Use the the nifty_scaffold generator with the +--factory_girl+ option to create
+a factory.rb file in test/ (if using Test::Unit or Shoulda) or spec/ (if using RSpec)
+and use factory_girl to provide the test fixtures.
+
+  script/generate nifty_scaffold --factory_girl Recipe name:string
+
+If the factory.rb file already exists then the new Factory will be appended to the end
+of the file.
+
+=== Formtastic
+
+Use the the nifty_scaffold generator with the +--formtastic+ option to generate
+formtastic code for the forms in the new and edit views.
+
+  script/generate nifty_scaffold --formtastic Recipe name:string
+
+When using the formtastic option you will need to make sure that you have installed the
+formtastic gem, generated the formtastic stylesheets, and added them to your application.rb
+layout file before running the application.
+
+=== Compatability
+
+The +--factory_girl+ and +--formtastic+ options should work alongside the other
+options. Notably they can be used with both the +--haml+ and +--RSpec+ options.
 
 == Included Generators
 
@@ -37,18 +79,6 @@ To view the README for each generator, run it with the +--help+ option.
 
 
 == Troubleshooting and FAQs
-
-<b>What is the difference between nifty_scaffold and built-in scaffold?</b>
-
-One of the primary differences is that nifty_scaffold allows you to choose which
-controller actions to generate.
-
-  script/generate nifty_scaffold post name:string index new edit
-
-There are a few changes to the generated code as well, such as no XML format by default.
-
-It also offers support for HAML, Shoulda, and RSpec.
-
 
 <b>I get "undefined method 'title'" error.</b>
 
@@ -86,10 +116,10 @@ change in the routing.
 Make sure you have mocha installed and require it in your spec/test helper.
 
   gem install mocha
-  
+
   # in spec_helper.rb
   config.mock_with :mocha
-  
+
   # in test_helper.rb
   require 'mocha'
 
@@ -104,3 +134,4 @@ http://github.com/ryanb/nifty-generators/
 
 If you wish the generators behaved differently, please consider
 forking the project and modifying to your heart's content.
+
